ISSUE-137 Revert submissions.solution_id to submission.version (#158)
