# tagbase_server/tagbase_server/controllers/tags_controller.py
@@ -41,7 +41,7 @@ def get_tag(tag_id):  # noqa: E501
                         "tag_id": row[1],
                         "date_time": row[2],
                         "filename": row[3],
-                        "solution_id": row[4],
+                        "version": row[4],
                         "notes": row[5],
                         "metadata": meta_dict,
                     }
@@ -73,8 +73,8 @@ def list_tags():  # noqa: E501
             return {"count": count, "tags": tags}
 
 
-def put_tag(tag_id, sub_id, notes=None, solution_id=None):  # noqa: E501
-    """Update the &#39;solution id&#39; and/or &#39;notes&#39; associated with a tag submission
+def put_tag(tag_id, sub_id, notes=None, version=None):  # noqa: E501
+    """Update the &#39;notes&#39; and/or &#39;version&#39; associated with a tag submission
 
     Update a tag submission # noqa: E501
 
@@ -84,8 +84,8 @@ def put_tag(tag_id, sub_id, notes=None, solution_id=None):  # noqa: E501
     :type sub_id:
     :param notes: Free-form text field where details of submitted eTUFF file for ingest can be provided e.g. submitter name, etuff data contents (tag metadata and measurements + primary position data, or just secondary solution-positional meta/data)
     :type notes: str
-    :param solution_id: Unique numeric identifier for a given tag geolocation dataset solution. solution_id&#x3D;1 is assigned to the primary or approved solution. Incremented solution_id&#39;s are assigned to other positional dataset solutions for a given tag_id and submission_id
-    :type solution_id:
+    :param version: Version identifier for the eTUFF tag data file ingested
+    :type version: str
 
     :rtype: Union[TagPut200, Tuple[TagPut200, int], Tuple[TagPut200, int, Dict[str, str]]
     """
@@ -97,20 +97,10 @@ def put_tag(tag_id, sub_id, notes=None, solution_id=None):  # noqa: E501
                     "UPDATE submission SET notes = %s WHERE tag_id = %s AND submission_id = %s",
                     (notes, tag_id, sub_id),
                 )
-            if solution_id is not None:
+            if version is not None:
                 cur.execute(
-                    "UPDATE submission SET solution_id = %s WHERE tag_id = %s AND submission_id = %s",
-                    (solution_id, tag_id, sub_id),
-                )
-                # possibly refactor into a TRIGGER
-                cur.execute(
-                    "UPDATE data_position SET solution_id = %s WHERE tag_id = %s AND submission_id = %s",
-                    (solution_id, tag_id, sub_id),
-                )
-                # possibly refactor into a TRIGGER
-                cur.execute(
-                    "UPDATE metadata_position SET solution_id = %s WHERE tag_id = %s AND submission_id = %s",
-                    (solution_id, tag_id, sub_id),
+                    "UPDATE submission SET version = %s WHERE tag_id = %s AND submission_id = %s",
+                    (version, tag_id, sub_id),
                 )
             message = f"Tag: '{int(tag_id)}' submission id: '{int(sub_id)}' successfully updated."
             return TagPut200.from_dict({"code": "200", "message": message})
